@@ -36,6 +36,9 @@ end
 # Include your application configuration below
 require 'mephisto_init'
 
+# Set this if you're running on a root path
+# ActionController::AbstractRequest.relative_url_root = '/blog'
+
 # turn this on to get detailed cache sweeper logging in production mode
 # Mephisto::SweeperMethods.cache_sweeper_tracing = true
 
